# iCVFrameWork

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build_scripts/aarch64_qnx/: build_700.sh
build_scripts/android/: build_armv7a.sh  build_armv8a.sh
build_scripts/x86_64_linux/: build.sh
cmake/: aarch64_qnx700.toolchain.cmake  depends.cmake  x86_64_linux.toolchain.cmake
include/: iCVBase_types.h
output/cfg/iCVFrameWork/: iCVFrameWork.cfg
output/resources/data/: dms2.264  dms_image.list  dms_test.list  dms_video.list
output/resources/model/mnn/: fd.mnn
source/ai_engine_agent/: onnxrt_wrapper.cpp  onnxrt_wrapper.h  ort_wrapper.cpp  ort_wrapper.h
source/ai_engine_agent/mnn/: mnn_schedule.hpp  mnn_wrapper.cpp  mnn_wrapper.h
source/ai_engine_agent/ort/: ort_wrapper.cpp  ort_wrapper.h
source/include/: iCVBase_def.h  iCVBase_errcode.h  iCVBase_inst_mgr.hpp  iCVBase_types.h  iCVFace_types.h
source/modules/restype/iCVFaceDetect/: CMakeLists.txt  base_img_proc.cpp  base_img_proc.h  iCVFaceDetect_cfg.h  iCVFaceDetect_config_defaults.h  iCVFaceDetect_def.cpp  iCVFaceDetect_def.h  iCVFaceDetect_engine.cpp  iCVFaceDetect_engine.h  mmyolo_face_detect_with_engine.cpp  mmyolo_face_detect_with_engine.h  nanodet_decode.hpp  nms.hpp
source/solutions/iCVFrameWork/: CMakeLists.txt  iCVFrameWorkconfig.h.in  version.txt
source/solutions/iCVFrameWork/iCVFrameWorkApi/: CMakeLists.txt  iCVFrameWork_api.cpp  iCVFrameWork_api.h  iCVFrameWork_cfg.h  iCVFrameWork_config_defaults.h  iCVFrameWork_debug.def  iCVFrameWork_mgr.hpp  iCVFrameWork_mgr_unit.h  iCVFrameWork_release.def  iCVFrameWork_shared.map  iCVFrameWork_static.sym  iCVFrameWork_types.h
source/solutions/iCVFrameWork/iCVFrameWorkPythonApi/: CMakeLists.txt  iCVFrameWork_pybind.cpp
source/solutions/iCVFrameWork/iCVFrameWorkTest/: CMakeLists.txt  iCVFrameWorkTest.cpp  test_type.h  video_common.hpp  video_fd_unit.hpp
tools/: create_new_solution.py  pybind11_test.py
